# csv-managed

./: .gitignore  .gitmodules  .hve-tracking.json  .markdownlint.json  .mcp.json  AGENTS.md  Cargo.toml  LICENSE  README.md  gemini.md  start.ps1  start.sh  verify-output.txt
.autoharness/: config.yaml  harness-manifest.yaml  install-templates.ps1  workspace-profile.yaml
.autoharness/staging/: AGENTS.md  start.ps1  start.sh  verify-workspace-report.json  verify-workspace-report.md
.backlogit/: backlogit.db  backlogit.db-shm  backlogit.db-wal  config.yml  memories.json
.backlogit/queue/: .stash.md
.context/: backlog.md  current-task.md  system_context.md
.context/active/: feature-plan_v1.1.0.md
.copilot-tracking/checkpoints/: 2026-02-14-0002-checkpoint.md
.engram/: registry.yaml
.github/: copilot-instructions.md
.github/agents/: adversarial-review.agent.md  architect-agent.md  build-orchestrator.agent.md  code-review-agent.md  codex-agent.md  copilot-instructions.md  docs-agent.md  orchestrator.agent.md  rust-engineer.agent.md  security-agent.md  security-sentinel.agent.md  ship.agent.md  stage.agent.md  task-implementor.agent.md  task-planner.agent.md  task-researcher.agent.md  test-agent.md
.github/chatmodes/: code-reviewer.chatmode.md  codex.chatmode.md  documentation.chatmode.md  planner.chatmode.md  security.chatmode.md  test-generator.chatmode.md
.github/instructions/: backlog-integration.instructions.md  ci-security.instructions.md  circuit-breaker.instructions.md  code-review-generic.instructions.md  commit-message.instructions.md  constitution.instructions.md  context-efficiency.instructions.md  continuous-learning.instructions.md  markdown.instructions.md  prompt-builder.instructions.md  strict-safety.instructions.md
.github/policies/: workflow-policies.md
.github/workflows/: ci.yml  release.yml
.plan/: backlog.md  feature-plan.md  plan-v1.6.0.md  plan-v2.5.0.md
.plan/features/: feature-plan_v1.1.0.md
.todos/: add_install_and_multi_index.md  backlog.md  current-task.md  next-steps.md
benches/: index_vs_sort.rs
docs/: adr.md  boolean-formatting.md  cli-help.md  datatype-mappings.md  encoding-normalization.md  examples.bat  examples.ps1  expressions.md  header-detection.md  indexing-and-sorting.md  naming-conventions.md  operations.md  pipelines.md  schema-examples.md  schema-inference.md  snapshots-and-verification.md  stats.md
src/: append.rs  cli.rs  columns.rs  data.rs  derive.rs  expr.rs  filter.rs  fix.rs  frequency.rs  index.rs  install.rs  io_utils.rs  join.rs  lib.rs  main.rs  metadata.rs  preview.rs  process.rs  rows.rs  schema.rs  schema_cmd.rs  stats.rs  table.rs  verify.rs  yaml_provider.rs
tests/: cli.rs  data.rs  edge_cases.rs  expr.rs  frequency.rs  index.rs  ipqs.rs  lib_preprocess.rs  preview.rs  probe.rs  process.rs  schema.rs  schema_cmd.rs  schema_evolution.rs  schema_internals.rs  stats.rs  stdin_pipeline.rs  string_ops.rs  table.rs
(+167 files in other folders)
