[package]
name = "csv_managed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
evalexpr = "11"
itertools = "0.13"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
