[package]
name = "csv-managed"
version = "1.0.001"
edition = "2024"
authors = ["Derek Williams <software.salt@gmail.com>"]
description = "High-performance command-line toolkit for streaming, indexing, and transforming CSV datasets"
license = "MIT"
repository = "https://github.com/softwaresalt/csv-managed"
readme = "README.md"
keywords = ["csv", "data", "wrangling", "cli", "rust"]
categories = ["command-line-utilities"]
homepage = "https://github.com/softwaresalt/csv-managed"

[dependencies]
anyhow = "1"
bincode = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "serde", "clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
evalexpr = "11"
itertools = "0.13"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
