[package]
name = "csv-managed"
version = "1.0.2"
edition = "2024"
authors = ["Derek Williams <software.salt@gmail.com>"]
description = "High-performance command-line toolkit for streaming, indexing, and transforming CSV datasets"
license = "MIT"
repository = "https://github.com/softwaresalt/csv-managed"
readme = "README.md"
keywords = ["csv", "data", "wrangling", "cli", "rust"]
categories = ["command-line-utilities"]
homepage = "https://github.com/softwaresalt/csv-managed"

[dependencies]
anyhow = "1"
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "serde", "clock"] }
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
evalexpr = "12"
itertools = "0.14"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
thiserror = "2"
uuid = { version = "1", features = ["serde"] }
sha2 = "0.10"
rust_decimal = { version = "1", features = ["serde"] }
similar = "2"
regex = "1"
heck = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "index_vs_sort"
harness = false
